--- a/search/templates/author.html
+++ b/search/templates/author.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 
-<div class="row row-cols-1 row-cols-md-3 g-3 mt-1">
+
+<div class="row row-cols-1 row-cols-md-3 g-3 mt-1" style="max-width: 1500px; ">
   {% for key, values in authors.items %}
   <div class="col">
-    <div class="card mb-3 bg-dark" style="max-width: 540px;color: beige; border-color: #212529; max-height: 540px;">
+    <div class="card mb-3 bg-dark" style="max-width: 540px;color: beige; border-color: #212529;">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="{{ values.0 }}" class="img-thumbnail bg-dark">
+          <img src="{{ values.0 }}" class="img-thumbnail bg-dark" style="border-color: #212529;">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -21,7 +22,6 @@
     </div>
   </div>
   {% endfor %}
-</div>
 </div>
 
 
