--- a/search/templates/layout.html
+++ b/search/templates/layout.html
@@ -12,9 +12,10 @@
 
 <body style="background-color: #505050;">
   <nav class="navbar navbar-expand-lg bg-dark">
-    <div class="container-fluid" >
+    <div class="container-fluid">
       <a class="navbar-brand" href="#" style="color: beige;">BOOKS</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -36,4 +37,5 @@
   {% block content %}
   {% endblock %}
 </body>
+
 </html>
